--- a/style.css
+++ b/style.css
@@ -6,18 +6,376 @@
 }
 
 * body {
+  background-color: #EEEEEE;
   font-family: sans-serif;
+}
+
+.header {
+  background-color: #EEEEEE;
+  height: 6vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 10px;
+}
+
+.header__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: auto;
+  height: 100%;
+  margin-left: 25px;
+}
+
+.header__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 1.2vw;
+  margin-right: 25px;
+  gap: 25px;
+}
+
+.header__menu__link {
+  color: black;
+  text-decoration: none;
+}
+
+.header [class^="header__menu"] {
+  list-style-type: none;
+}
+
+.header__menu__link {
+  text-decoration: none;
+}
+
+.container {
+  height: 130vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.aboutus {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 30vh;
+}
+
+.aboutus__video {
+  width: 25vw;
+}
+
+.contactus {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 20vh;
+}
+
+.contactus__header {
+  font-size: 1.5vw;
+  margin-bottom: 5px;
+}
+
+.contactus__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contactus__form__email__input {
+  font-size: 1vw;
+  padding: 5px 5px;
+}
+
+.contactus__form__submit__button {
+  font-size: 1vw;
+  color: white;
+  background-color: #242153;
+  border: 0;
+  margin-top: 10px;
+  padding: 5px 10px;
 }
 
 .products {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: 40vh;
+}
+
+.products__grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 55vw;
+}
+
+.products__grid [class^="products__grid__img"] {
+  -ms-flex-preferred-size: 15vw;
+      flex-basis: 15vw;
+  height: 10vh;
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.products__grid [class^="products__grid__desc"] {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-preferred-size: 40vw;
+      flex-basis: 40vw;
+  height: 10vh;
+}
+
+.products__grid [class^="products__grid__desc"] h2 {
+  font-size: 1.5vw;
+}
+
+.products__grid [class^="products__grid__desc"] p {
+  font-size: 1vw;
+}
+
+.products__grid__img-1 {
+  background-image: url("./images/smart_bulbs.png");
+}
+
+.products__grid__img-2 {
+  background-image: url("./images/smart_switches.png");
+}
+
+.products__grid__img-3 {
+  background-image: url("./images/smart_plugs.png");
+}
+
+.pricing {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pricing__kit__pack {
+  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 15vw;
+  height: 35vh;
+}
+
+.pricing__kit__pack__name {
+  background-color: #ddd;
+  padding: 15px 0;
+  width: 100%;
+  font-size: 1vw;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.pricing__kit__pack__price {
+  font-size: 1.5vw;
+  font-weight: 700;
+  margin-top: 15px;
+}
+
+.pricing__kit__pack__desc {
+  font-size: 1vw;
+  height: 15vh;
+  margin-top: 15px;
+}
+
+.pricing__kit__pack__desc ol {
+  list-style: none;
+}
+
+.pricing__kit__pack__select {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.pricing__kit__pack__select__button {
+  font-size: 1vw;
+  color: white;
+  background-color: #242153;
+  border: 0;
+  padding: 5px 10px;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 6vh;
+  background-color: #DDDDDD;
+  text-align: center;
 }
 
 @media (max-width: 650px) {
-  body {
-    font-family: sans-serif;
+  .header {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header__image {
+    display: none;
+  }
+  .header__menu {
+    font-size: 3vw;
+  }
+  .aboutus__video {
+    width: 50vw;
+  }
+  .contactus__header {
+    font-size: 3.5vw;
+    margin-bottom: 5px;
+  }
+  .contactus__form__email__input {
+    font-size: 2.5vw;
+    padding: 5px 5px;
+  }
+  .contactus__form__submit__button {
+    font-size: 2.5vw;
+    margin-top: 10px;
+    padding: 5px 10px;
+  }
+  .products__grid {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 10px;
+  }
+  .products__grid [class^="products__grid__desc"] {
+    -ms-flex-preferred-size: 20vw;
+        flex-basis: 20vw;
+  }
+  .products__grid [class^="products__grid__desc"] h2 {
+    font-size: 2.5vw;
+  }
+  .products__grid [class^="products__grid__desc"] p {
+    display: none;
+  }
+  .pricing {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .pricing__kit__pack {
+    border: 1px solid black;
+    width: 40vw;
+    height: 30vh;
+  }
+  .pricing__kit__pack__name {
+    font-size: 3vw;
+  }
+  .pricing__kit__pack__price {
+    font-size: 5vw;
+  }
+  .pricing__kit__pack__desc {
+    font-size: 3.5vw;
+  }
+  .pricing__kit__pack__select__button {
+    font-size: 3vw;
   }
 }
 /*# sourceMappingURL=style.css.map */
