--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,10 @@
     justify-content: space-between;
     align-items: center;
 
-    margin-top: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 
     &__image {
         display: flex;
@@ -60,6 +63,8 @@
     height: 130vh;
     display: flex;
     flex-direction: column;
+
+    margin-top: 6vh;
 }
 
 .aboutus {
